--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,26 +1,25 @@
 name: proyectoedumentor
 description: "A new Flutter project."
 publish_to: 'none'
-
-version: 1.0.0+6
+version: 1.0.0+8
 
 environment:
-
   sdk: ^3.9.2
 
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:          # ← AÑADIDO
+    sdk: flutter
   cupertino_icons: ^1.0.8
   go_router: ^14.0.0
   provider: ^6.1.1
+  shared_preferences: ^2.3.2
   image_picker: ^1.0.4
   photo_view: ^0.14.0
   http: ^1.2.1
   url_launcher: ^6.3.0
   intl: any
-  shared_preferences: ^2.3.2
   crypto: ^3.0.5
   google_sign_in: ^6.2.1
   open_file: ^3.3.2
@@ -31,18 +30,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^5.0.0
-  flutter_launcher_icons: ^0.13.1
-
-flutter_icons:
-  android: true
-  ios: false
-  image_path: "assets/icon/logo.png"
 
 flutter:
+  generate: true
   uses-material-design: true
-
   assets:
     - assets/img/
     - assets/icon/
