--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: proyectoedumentor
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.0.0+10
+version: 1.0.0+14
 
 environment:
   sdk: ^3.9.2
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:          # ← AÑADIDO
+  flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.8
   go_router: ^14.0.0
