--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: proyectoedumentor
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.0.0+14
+version: 1.0.0+16
 
 environment:
   sdk: ^3.9.2
@@ -26,6 +26,10 @@ dependencies:
   path: ^1.8.3
   path_provider: ^2.1.2
   google_sign_in: ^6.2.1
+  firebase_core: ^4.2.1
+  firebase_ai: ^3.6.0
+  uuid: ^4.5.0
+  flutter_tts: ^4.0.2
 
 dev_dependencies:
   flutter_test:
